# ShareGPT4V

./: README.md  pyproject.toml
data/: example_training.json
datasets/: train_samples_tuning_1p.json
notebooks/: lora_dissect.ipynb  predict_model.ipynb  prepare_trainset.ipynb  train_lora.ipynb  visuals.ipynb
share4v/model/: builder.py  share4v_arch.py
share4v/train/: train.py
tools/: app.py
