[tool.poetry]
name = "share4v"
version = "1.0.0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
authors = []  # Add author(s) here, e.g., ["Your Name <you@example.com>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
homepage = "https://sharegpt4v.github.io/"
repository = "https://github.com/InternLM/InternLM-XComposer"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/InternLM/InternLM-XComposer/issues"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
torch = "2.4.*"
torchvision = "0.19.*"
transformers = "4.31.0"
tokenizers = ">=0.12.1,<0.14"
sentencepiece = "0.1.99"
shortuuid = "*"
accelerate = "0.21.0"
peft = "0.4.0"
bitsandbytes = "0.43.3"
# xformers = "0.0.21"
markdown2 = { version = "*", extras = ["all"] }
numpy = "1.*"
scikit-learn = "1.2.2"
urllib3 = "1.*"
gradio = "4.*"
requests = "*"
httpx = "0.24.0"
uvicorn = "*"
fastapi = "0.112.4"
ftfy = "*"
einops = "0.6.1"
einops-exts = "0.0.4"
timm = "0.6.13"
prettytable = "*"
openpyxl = "*"

# Optional dependencies for training.
deepspeed = { version = "*", optional = true }
ninja = { version = "*", optional = true }
ipykernel = "^6.29.5"
torchsummary = "^1.5.1"
torchviz = "^0.0.3"
english-words = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
